# QtZekyllManager

./: CMakeLists.txt  QtZekyllManager.pro  build_me.pro  closewithoutsavingdialog.h  closewithoutsavingdialog.ui  editor.cpp  editor.h  editor_dialog.ui  git.cpp  git.h  lzcsde.cpp  lzcsde.h  lzcsde_entry.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.pro  math_functions.cpp  math_functions.h  messages.cpp  messages.h  myqtablewidget.cpp  myqtablewidget.h  myqtabwidget.cpp  myqtabwidget.h  project.pro  script_functions.cpp  script_functions.h  zkiresize.cpp  zkiresize.h  zkrewrite.cpp  zkrewrite.h  zmeditor.ui
libgit2/: CMakeLists.txt
manager/: CMakeLists.txt  call_once.h  checkoutdialog.cpp  checkoutdialog.h  checkoutdialog.ui  closewithoutsavingdialog.cpp  closewithoutsavingdialog.h  closewithoutsavingdialog.ui  coding_functions.cpp  coding_functions.h  commitdialog.cpp  commitdialog.h  commitdialog.ui  deletebranchtagdialog.cpp  deletebranchtagdialog.h  deletebranchtagdialog.ui  editor.cpp  editor.ui  external_functions.cpp  external_functions.h  git.cpp  git.h  gitoperationtracker.cpp  gitoperationtracker.h  lgit.cpp  lgit.h  lgit_branches.cpp  lgit_branches.h  lgit_current.cpp  lgit_current.h  lgit_log.cpp  lgit_log.h  lgit_remotes.cpp  lgit_remotes.h  lgit_status.cpp  lgit_status.h  lgit_tags.cpp  lgit_tags.h  logdialog.cpp  logdialog.h  (+45 more)
manager/cmake/Modules/: FindSecurity.cmake
qodeedit/: CMakeLists.txt  QodeEdit.pro  QodeEditConfig.h.in  autogen.pri  config.pri  qmake-extensions.pri
qscintilla/: qscintilla_gpl.pro
qscintilla2/Qt4Qt5/: qscintilla2.pro
qscintilla_gpl/Qt4Qt5/: CMakeLists.txt  Qt4Qt5.pro
